pamc/src/tests/sample_code/should_fail/rec_fun_no_decreasing_param.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let x = fun x(a: Nat, b: Nat): Nat {
    x(a, b)
};
